# rlprof

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PLAN.MD  README.md  logs.md  pyproject.toml
.github/workflows/: ci.yml  gpu-smoke.yml  release.yml
.venv-install/: pyvenv.cfg
cpp_tests/: test_aggregate.cpp  test_artifacts.cpp  test_attach.cpp  test_audit.cpp  test_batch_analyzer.cpp  test_bench.cpp  test_bench_json.cpp  test_cache_analyzer.cpp  test_categorizer.cpp  test_cli.cpp  test_clock_control.cpp  test_diff.cpp  test_disagg_model.cpp  test_doctor.cpp  test_export.cpp  test_interactive.cpp  test_log_parser.cpp  test_otlp_export.cpp  test_parser.cpp  test_phase_analyzer.cpp  test_prefix_analyzer.cpp  test_recommender.cpp  test_remote.cpp  test_report.cpp  test_request_trace.cpp  test_serve_profiler.cpp  test_serve_report.cpp  test_server.cpp  test_sglang_metrics.cpp  test_stability.cpp  test_store.cpp  test_targets.cpp  test_traffic.cpp  test_traffic_replayer.cpp  test_validate.cpp  test_vllm_metrics.cpp  test_workload_classifier.cpp
cpp_tests/fixtures/: traffic.jsonl
examples/: qwen35_a10g_video.md  qwen35_a10g_video_demo.sh  qwen35_a10g_video_traffic.jsonl  start_qwen35_video_server.sh  stop_qwen35_video_server.sh
hotpath_py/: __init__.py  bench_cuda.py  bench_cuda_kernels.py  cli.py  serve_report.py
include/hotpath/: aggregate.h  artifacts.h  batch_analyzer.h  cache_analyzer.h  clock_control.h  diff.h  disagg_model.h  doctor.h  export.h  log_parser.h  ops.h  otlp_export.h  phase_analyzer.h  prefix_analyzer.h  recommender.h  remote.h  report.h  request_trace.h  serve_profiler.h  sglang_metrics.h  stability.h  store.h  targets.h  traffic.h  traffic_replayer.h  validate.h  workload_classifier.h
include/hotpath/bench/: registry.h  runner.h
include/hotpath/bench/kernels/: rms_norm.h  rotary_emb.h  silu_mul.h
include/hotpath/profiler/: attach.h  categorizer.h  kernel_record.h  parser.h  runner.h  server.h  vllm_metrics.h
include/rlprof/: aggregate.h  artifacts.h  diff.h  doctor.h  export.h  ops.h  remote.h  report.h  stability.h  store.h  targets.h  traffic.h  validate.h
include/rlprof/bench/: registry.h  runner.h
include/rlprof/bench/kernels/: rms_norm.h  rotary_emb.h  silu_mul.h
include/rlprof/profiler/: attach.h  categorizer.h  kernel_record.h  parser.h  runner.h  server.h  vllm_metrics.h
rlprof_py/: __init__.py  bench_cuda.py
src/: aggregate.cpp  artifacts.cpp  clock_control.cpp  diff.cpp  doctor.cpp  export.cpp  interactive.cpp  interactive.h  main.cpp  ops.cpp  remote.cpp  report.cpp  stability.cpp  store.cpp  targets.cpp  traffic.cpp  validate.cpp
src/advisor/: disagg_model.cpp  recommender.cpp  workload_classifier.cpp
src/bench/: registry.cpp  runner.cpp
src/bench/kernels/: rms_norm.cpp  rotary_emb.cpp  silu_mul.cpp
src/export/: otlp_export.cpp
src/profiler/: attach.cpp  categorizer.cpp  parser.cpp  runner.cpp  server.cpp  sglang_metrics.cpp  vllm_metrics.cpp
src/serving/: batch_analyzer.cpp  cache_analyzer.cpp  log_parser.cpp  phase_analyzer.cpp  prefix_analyzer.cpp  serve_profiler.cpp  traffic_replayer.cpp
tools/: bench_cuda.py  bench_cuda_kernels.py
web/: index.html
