[build-system]
requires = [
    "cmake>=3.28",
    "ninja>=1.11",
    "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "rlprof"
version = "0.1.0"
description = "Profile vLLM inference under RL-style rollout workloads."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["cuda", "nsys", "profiling", "rl", "vllm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]

[project.urls]
Homepage = "https://github.com/alityb/rlprof"
Repository = "https://github.com/alityb/rlprof"
Issues = "https://github.com/alityb/rlprof/issues"

[project.optional-dependencies]
bench = [
    "torch>=2.2",
    "triton>=2.2",
    "vllm",
]

[project.scripts]
rlprof = "rlprof_py.cli:main"

[tool.scikit-build]
wheel.packages = ["rlprof_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
