[build-system]
requires = [
    "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "hotpath"
version = "0.2.3"
description = "Profile vLLM inference under RL-style rollout workloads."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["cuda", "nsys", "profiling", "rl", "vllm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]

[project.urls]
Homepage = "https://github.com/alityb/hotpath"
Repository = "https://github.com/alityb/hotpath"
Issues = "https://github.com/alityb/hotpath/issues"

[project.optional-dependencies]
bench = [
    "torch>=2.2",
    "triton>=2.2",
    "vllm",
]

[project.scripts]
hotpath = "hotpath_py.cli:main"

[tool.scikit-build]
sdist.include = [
    "CMakeLists.txt",
    "include/**",
    "src/**",
    "hotpath_py/**",
    "README.md",
    "CHANGELOG.md",
]
sdist.exclude = [
    "._*",
    "**/._*",
    ".DS_Store",
    "**/.DS_Store",
    ".venv/**",
    ".publish-venv/**",
    "dist/**",
    "build/**",
]
wheel.exclude = [
    "._*",
    "**/._*",
    ".DS_Store",
    "**/.DS_Store",
    ".venv/**",
    ".publish-venv/**",
    "dist/**",
    "build/**",
]
wheel.packages = ["hotpath_py"]

[tool.cibuildwheel]
build = ["cp310-manylinux_x86_64", "cp311-manylinux_x86_64", "cp312-manylinux_x86_64"]
skip = ["pp*"]
test-command = "python -c \"import hotpath_py; print(hotpath_py.__version__)\" && hotpath --help && printf 'q\\n' | hotpath"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = [
    "dnf install -y sqlite-devel",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
